type: <fix> action: <fixed overflow-x by setting width, height and position relative on body tag>

--- a/about/about.css
+++ b/about/about.css
@@ -76,7 +76,7 @@
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    right: 0;
+    width: 100vw;
     cursor: pointer;
     z-index: 4;
     padding: 1rem 1rem;
