--- a/home.scss
+++ b/home.scss
@@ -90,12 +90,6 @@
 
 /* *Mobile Display Style */
 @media screen and (max-width: 768px) {
-  body {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-  }
-
   .qr-code-div {
     display: grid;
     grid-template-columns: repeat(4, 6rem);
