--- a/style/header.scss
+++ b/style/header.scss
@@ -19,6 +19,12 @@
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+  }
+
   .nav-bar {
     position: absolute;
     display: flex;
